--- a/blog.css
+++ b/blog.css
@@ -4,6 +4,10 @@
 
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
+  /* 
+  Cool ass font
+  font-family: Consolas, monaco, monospace; 
+  */
   color: #555;
 }
 
