--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,8 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 }
 
 p {
-  margin-top: 0; }
+  margin-top: 0; 
+}
 
 
 /* Links
@@ -444,16 +445,21 @@ there.
 
 /* Tabs */
 ul.tabs{
-  float:right;
-  padding: 0px;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  margin: 18px 0px;
   list-style: none;
 }
+
 ul.tabs li{
   background: none;
   color: #222;
   display: inline-block;
   padding: 10px 15px;
   cursor: pointer;
+  font-size: 1.5em;
+  font-weight: lighter;
 }
 
 ul.tabs li a {
@@ -466,12 +472,14 @@ ul.tabs li.current{
 }
 
 ul.tabs li.current a{
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .tab-content{
   display: none;
   padding: 15px;
+  position: relative;
+  top: 100px;
 }
 
 .tab-content.current{
@@ -491,12 +499,13 @@ ul.tabs li.current a{
 }
 
 footer {
-  margin-top: 30px;
+  margin-top: 10%;
   text-align: center;
   line-height: 30px;
 }
 
 footer a {
+  color: #0E9ECB;
   text-decoration: none;
 }
 
@@ -528,6 +537,23 @@ footer img {
   height: 200%;
   z-index: -1;
   opacity: 0.1;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background-color: #d0ebc0; 
+  border-bottom: solid thin;
+  opacity: 0.8;
+}
+
+.header h1,
+.header p {
+  margin-left: 10px;
+  margin-bottom: 0.5rem;
 }
 
 *{box-sizing: border-box;}
