--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ ul.tabs li.current a{
 .tab-content{
   display: none;
   padding: 15px;
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
 .tab-content.current{
