--- a/css/style.css
+++ b/css/style.css
@@ -554,4 +554,9 @@ footer img {
   margin-bottom: 0.5rem;
 }
 
+.header h1 a {
+  color: rgb(34, 34, 34);;
+  text-decoration: none;
+}
+
 *{box-sizing: border-box;}
