--- a/css/style.css
+++ b/css/style.css
@@ -543,9 +543,9 @@ footer img {
   left: 0;
   right: 0;
   z-index: 100;
-  background-color: #d0ebc0; 
-  border-bottom: solid thin;
-  opacity: 0.8;
+  background-color: #d0ebc0;
+  opacity: 0.9;
+  box-shadow: 0px 2px 10px 1px;
 }
 
 .header h1,
@@ -555,7 +555,7 @@ footer img {
 }
 
 .header h1 a {
-  color: rgb(34, 34, 34);;
+  color: rgb(34, 34, 34);
   text-decoration: none;
 }
 
