Fixed a bug, added dates to the posts

--- a/css/style.css
+++ b/css/style.css
@@ -511,9 +511,15 @@ footer img {
   margin: 0px 7px;
 }
 
-.content-title {
+.content-header {
   background-color: #d0ebc0;
   margin-top: 10px;
+}
+
+.content-header p {
+  font-size: 1.2em;
+  font-style: italic;
+  font-weight: lighter;
 }
 
 .content-card {
