--- a/css/style.css
+++ b/css/style.css
@@ -486,8 +486,9 @@ ul.tabs li.current a{
 }
 
 .tab-title {
-  margin-left: 10%;
+  margin-left: 15%;
   margin-bottom: 10px;
+  margin-top: 10px;
   font-style: italic;
 }
 
@@ -525,7 +526,8 @@ footer img {
 .content-card {
   background-color: #d0ebc0;
   border-radius: 5px;
-  width: 80%;
+  width: 70%;
+  font-size: 1.1em;
   padding: 10px 30px;
   margin-bottom: 20px;
   margin-left: auto;
