--- a/css/style.css
+++ b/css/style.css
@@ -569,4 +569,10 @@ footer img {
   text-decoration: none;
 }
 
+.commentContainer {
+  border-top: thin solid;
+  padding-top: 1em;
+  line-height: 0;
+}
+
 *{box-sizing: border-box;}
