--- a/css/style.css
+++ b/css/style.css
@@ -547,7 +547,7 @@ footer img {
   opacity: 0.1;
 }
 
-.header {
+#header {
   position: fixed;
   top: 0;
   left: 0;
@@ -558,13 +558,13 @@ footer img {
   box-shadow: 0px 2px 10px 1px;
 }
 
-.header h1,
-.header p {
+#header h1,
+#header p {
   margin-left: 10px;
   margin-bottom: 0.5rem;
 }
 
-.header h1 a {
+#header h1 a {
   color: rgb(34, 34, 34);
   text-decoration: none;
 }
