--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ html {
 }
 
 body {
-  background-color: rgba(158,188,130,0.4);
+  background-color: rgba(214,241,146,0.7);
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
@@ -488,10 +488,9 @@ ul.tabs li.current a{
 }
 
 .tab-title {
-  margin-left: 15%;
-  margin-bottom: 10px;
-  margin-top: 10px;
   font-style: italic;
+  width : 50%;
+  margin : 0 auto;
 }
 
 .content-card img {
@@ -515,7 +514,6 @@ footer img {
 }
 
 .content-header {
-  background-color: #d0ebc0;
   margin-top: 10px;
 }
 
@@ -526,15 +524,17 @@ footer img {
 }
 
 .content-card {
-  background-color: #d0ebc0;
+  background-color: #D6F192;
   border-radius: 5px;
-  width: 70%;
+  width: 50%;
   font-size: 1.1em;
   padding: 10px 30px;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 22px auto;
   box-shadow: 3px 3px 8px;
+}
+
+.content-card:hover {
+    box-shadow : 3px 3px 8px 1px;
 }
 
 #background {
@@ -553,15 +553,15 @@ footer img {
   left: 0;
   right: 0;
   z-index: 100;
-  background-color: #d0ebc0;
+  background-color: #D6F192;
   opacity: 0.9;
   box-shadow: 0px 2px 10px 1px;
 }
 
 #header h1,
 #header p {
-  margin-left: 10px;
-  margin-bottom: 0rem;
+  margin-left: 15px;
+  margin-bottom: 0.2rem;
 }
 
 #header a {
@@ -580,3 +580,21 @@ footer img {
 }
 
 *{box-sizing: border-box;}
+
+.elevator-button {
+    text-align: center;
+    cursor: pointer;
+    width: 140px;
+    margin: auto;
+}
+
+.elevator-button:hover {
+    opacity: 0.7;
+}
+
+.elevator-button svg {
+    width: 80px;
+    height: 80px;
+    display: block;
+    margin: auto;
+}
