--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,166 @@ hr {
   clear: both; }
 
 
+#titles {
+    height : 100px;
+    width : 40%;
+    float : left;
+}
 
+.tab-title {
+  font-style: italic;
+  width : 100%;
+  margin : 0 auto;
+}
+
+.content-card {
+  background-color: #D6F192;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 1.1em;
+  padding: 10px 30px;
+  margin: 22px auto;
+  box-shadow: 3px 3px 8px;
+}
+
+.menu-button {
+    display : inherit;
+}
+
+/* Tabs */
+ul.tabs{
+  position: fixed;
+  height : 100px;
+  top: 0px;
+  right: 0px;
+  margin: 0px;
+  list-style: none;
+}
+
+ul.tabs li{
+  background: none;
+  margin : 32px auto;
+  color: #222;
+  padding: 0px 15px;
+  cursor: pointer;
+  font-size: 1.5em;
+  font-weight: lighter;
+}
+
+ul.tabs li.tab-link {
+    display : none;
+}
+
+ul.tabs li :hover {
+  font-weight: normal;
+}
+
+ul.tabs li a {
+  text-decoration: none;
+  color: #222;
+}
+
+ul.tabs li.current{
+  color: #222;
+}
+
+ul.tabs li.current a{
+  font-weight: bold;
+}
+
+.tab-content{
+  display: none;
+  padding: 15px;
+  padding-top: 100px;
+}
+
+.tab-content.current{
+  display: inherit;
+}
+
+footer {
+  text-align: center;
+  line-height: 30px;
+}
+
+footer a {
+  color: #0E9ECB;
+  text-decoration: none;
+}
+
+footer img {
+  margin: 0px 7px;
+}
+
+.content-header {
+  margin-top: 10px;
+}
+
+.content-header p {
+  font-size: 1.2em;
+  font-style: italic;
+  font-weight: lighter;
+}
+
+.content-card:hover {
+    box-shadow : 3px 3px 8px 1px;
+}
+
+#background {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+  z-index: -1;
+  opacity: 0.1;
+}
+
+#header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height : 100px;
+  z-index: 100;
+  background-color: #D6F192;
+  opacity: 0.9;
+  box-shadow: 0px 2px 10px 1px;
+}
+
+#header h1,
+#header p {
+  margin-left: 15px;
+  margin-bottom: 0.2rem;
+}
+
+#header a {
+  color: rgb(34, 34, 34);
+  text-decoration: none;
+}
+
+#header p a {
+  font-style: italic;
+}
+
+.commentContainer {
+  border-top: thin solid;
+  padding-top: 1em;
+  line-height: 0;
+}
+
+*{box-sizing: border-box;}
+
+.elevator-button {
+    text-align: center;
+    cursor: pointer;
+    width: 140px;
+    margin: auto;
+}
+
+.elevator-button:hover {
+    opacity: 0.7;
+}
 
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -381,7 +540,8 @@ there.
 
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+}
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {
@@ -432,6 +592,18 @@ there.
 
 /* Larger than tablet */
 @media (min-width: 750px) {
+    .tab-title,
+    .content-card {
+      width : 50%;
+    }
+
+    ul.tabs li.tab-link {
+        display : inline-block;
+    }
+
+    ul.tabs li.tab-menu {
+        display : none;
+    }
 }
 
 /* Larger than desktop */
@@ -440,161 +612,3 @@ there.
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
 
-/* Tabs */
-ul.tabs{
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  margin: 15px 0px;
-  list-style: none;
-}
-
-ul.tabs li{
-  background: none;
-  color: #222;
-  display: inline-block;
-  padding: 10px 15px;
-  cursor: pointer;
-  font-size: 1.5em;
-  font-weight: lighter;
-}
-
-
-ul.tabs li :hover {
-  font-weight: normal;
-}
-
-ul.tabs li a {
-  text-decoration: none;
-  color: #222;
-}
-
-ul.tabs li.current{
-  color: #222;
-}
-
-ul.tabs li.current a{
-  font-weight: bold;
-}
-
-.tab-content{
-  display: none;
-  padding: 15px;
-  padding-top: 100px;
-}
-
-.tab-content.current{
-  display: inherit;
-}
-
-.tab-title {
-  font-style: italic;
-  width : 50%;
-  margin : 0 auto;
-}
-
-.content-card img {
-  max-width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-footer {
-  text-align: center;
-  line-height: 30px;
-}
-
-footer a {
-  color: #0E9ECB;
-  text-decoration: none;
-}
-
-footer img {
-  margin: 0px 7px;
-}
-
-.content-header {
-  margin-top: 10px;
-}
-
-.content-header p {
-  font-size: 1.2em;
-  font-style: italic;
-  font-weight: lighter;
-}
-
-.content-card {
-  background-color: #D6F192;
-  border-radius: 5px;
-  width: 50%;
-  font-size: 1.1em;
-  padding: 10px 30px;
-  margin: 22px auto;
-  box-shadow: 3px 3px 8px;
-}
-
-.content-card:hover {
-    box-shadow : 3px 3px 8px 1px;
-}
-
-#background {
-  position: fixed; 
-  top: -50%; 
-  left: -50%; 
-  width: 200%; 
-  height: 200%;
-  z-index: -1;
-  opacity: 0.1;
-}
-
-#header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 100;
-  background-color: #D6F192;
-  opacity: 0.9;
-  box-shadow: 0px 2px 10px 1px;
-}
-
-#header h1,
-#header p {
-  margin-left: 15px;
-  margin-bottom: 0.2rem;
-}
-
-#header a {
-  color: rgb(34, 34, 34);
-  text-decoration: none;
-}
-
-#header p a {
-  font-style: italic;
-}
-
-.commentContainer {
-  border-top: thin solid;
-  padding-top: 1em;
-  line-height: 0;
-}
-
-*{box-sizing: border-box;}
-
-.elevator-button {
-    text-align: center;
-    cursor: pointer;
-    width: 140px;
-    margin: auto;
-}
-
-.elevator-button:hover {
-    opacity: 0.7;
-}
-
-.elevator-button svg {
-    width: 80px;
-    height: 80px;
-    display: block;
-    margin: auto;
-}
