Trying out Ostrich font

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
       <div class="title-wrapper">
-          <h1 class="site-title"><a href="{{ site.baseurl }}/">Arkady</a></h1>
+          <h1 class="site-title"><a href="{{ site.baseurl }}/">Arkady Arkhangorodsky</a></h1>
         <a class="site-subtitle" href="http://www.www3.reocities.com/SiliconValley/heights/2305/">Welcome to my place in the web</a>
       </div>
 
