--- a/css/main.scss
+++ b/css/main.scss
@@ -5,8 +5,13 @@
 
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,700italic,400italic|Oxygen:400,300,700);
 
+@font-face {
+    font-family: Ostrich;
+    src: url(ostrich-regular.ttf);
+}
+
 // Our variables
-$display-font-family: 'Droid Serif', serif;
+$display-font-family: 'Ostrich', 'Droid Serif', serif;
 $base-font-family: 'Oxygen', Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
@@ -25,7 +30,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    800px;
 
-$on-palm:          600px;
+$on-palm:          720px;
 $on-laptop:        800px;
 
 
