--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,6 +12,7 @@ $navbar-height : 104px;
     position: relative;
 }
 
+
 .title-wrapper {
     position: absolute;
     top: 50%;
@@ -20,9 +21,13 @@ $navbar-height : 104px;
 
     .site-title {
         display: block;
-        font-size: 48px;
+        font-size: 46px;
         margin-bottom: 0;
 
+        .first-name {
+            font-size : 52px;
+            color : darken($text-color, 30%);
+        }
         &,
         &:visited {
             color: $grey-color-dark;
