--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,7 +22,7 @@ $navbar-height : 104px;
     .site-title {
         display: block;
         font-size: 46px;
-        margin-bottom: 0;
+        margin-bottom: -15px;
 
         a {
             &:hover {
@@ -66,7 +66,7 @@ $navbar-height : 104px;
 
     @include media-query($on-palm) {
         position: absolute;
-        top: 9px;
+        top: 30px;
         right: 30px;
         background-color: $background-color;
         border: 1px solid $grey-color;
@@ -76,15 +76,15 @@ $navbar-height : 104px;
         .menu-icon {
             display: block;
             float: right;
-            width: 36px;
-            height: 26px;
+            width: 45px;
+            height: 32px;
             line-height: 0;
             padding-top: 10px;
             text-align: center;
 
             > svg {
-                width: 18px;
-                height: 15px;
+                width: 24px;
+                height: 20px;
 
                 path {
                     fill: $grey-color-dark;
